output/illustrative_examples/figure1_TJ/explanation_from_other_techniques/explanation_PEM_2.7.txt
line 3
    print  "Xx x"a
                 ^
SyntaxError: invalid syntax